# skema

./: .gitignore  README.md  implementation plan  test_api.rs
core/: Cargo.toml  test_parse.rs
core/src/: lib.rs  schema.rs
core/src/parsers/: enums.rs  graphql.rs  json_schema.rs  mod.rs  mongodb.rs  prisma.rs  sql.rs  typescript.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: Canvas.tsx  Editor.tsx  MethodTree.tsx  NodeCard.tsx  NodeDetailDrawer.tsx
web/src/core_pkg/: README.md  core.d.ts  core.js  core_bg.wasm.d.ts  package.json
web/src/editor/: languageFromFileName.ts  skemaCodemirrorTheme.ts
web/src/utils/: layout.ts
