[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
graphql-parser = "0.4.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
sqlparser = "0.62.0"
swc_common = "21.0.1"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "39.0.2"
wasm-bindgen = "0.2.121"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt from wasm-pack can fail on some toolchains; unoptimized wasm is fine for dev.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

